bug with image alignment when adding a border to images #81

--- a/assets/css/modula.css
+++ b/assets/css/modula.css
@@ -3,6 +3,7 @@
 	overflow: hidden;
 	transition: transform .3s ease-out, opacity .2s linear, top .3s, left .6s;
 	opacity: 0;
+	box-sizing: border-box;
 }
 .modula .items .item > a {
 	display: block;
